入力枠の変更

--- a/src/main/resources/templates/cardOrder/user.html
+++ b/src/main/resources/templates/cardOrder/user.html
@@ -31,21 +31,21 @@
                                 姓：
                                 <input type="text" style = "width:150px;" name="kanjiName" th:value="${form.kanjiName}"/>
                                 名：
-                                <input type="text" style = "width:150px;" name="kanjiName" th:value="${form.kanjiName}"/>
+                                <input type="text" style = "width:150px;" name="kanjiName1" th:value="${form.kanjiName1}"/>
                             </div>
                             <div class="field" th:classappend="${form.hasErrors('kanaName')} ? 'error'">
                                 <label>お名前（カナ）</label>
                                 セイ:
                                 <input type="text" style = "width:150px;" name="kanaName" th:value="${form.kanaName}"/>
                                 メイ:
-                                <input type="text" style = "width:150px" name="kanaName" th:value="${form.kanaName}"/>
+                                <input type="text" style = "width:150px" name="kanaName1" th:value="${form.kanaName1}"/>
                             </div>
                             <div class="field" th:classappend="${form.hasErrors('alphabetName')} ? 'error'">
                                 <label>お名前（ローマ字）</label>
                                 姓（Last name）
                                 <input type="text"style = "width:150px;"  name="alphabetName" th:value="${form.alphabetName}"/>
                                 名（first name）
-                                <input type="text" style = "width:150px;" name="alphabetName" th:value="${form.alphabetName}"/>
+                                <input type="text" style = "width:150px;" name="alphabetName1" th:value="${form.alphabetName1}"/>
                             </div>
                             <div class="field" th:classappend="${form.hasErrors('gender')} ? 'error'">
                                 <label>性別</label>
@@ -60,7 +60,7 @@
                                 <label>郵便番号</label>
                                 <input type="text" style = "width:100px;" class="zipcode" name="zipCode" th:value="${form.zipCode}"/>
                                  -
-                                <input type="text" style = "width:100px;" class="zipcode" name="zipCode" th:value="${form.zipCode}"/>
+                                <input type="text" style = "width:100px;" class="zipcode" name="zipCode1" th:value="${form.zipCode1}"/>
                             </div>
                             <div class="field" th:classappend="${form.hasErrors('address')} ? 'error'">
                                 <label>ご住所</label>
@@ -70,17 +70,17 @@
                                 <label>自宅電話番号</label>
                                 <input type="text" style = "width:100px;"  name="homePhoneNumber" th:value="${form.homePhoneNumber}"/>
                                  -
-                                <input type="text" style = "width:100px;"  name="homePhoneNumber" th:value="${form.homePhoneNumber}"/>
+                                <input type="text" style = "width:100px;"  name="homePhoneNumber1" th:value="${form.homePhoneNumber1}"/>
                                  -
-                                <input type="text" style = "width:100px;"  name="homePhoneNumber" th:value="${form.homePhoneNumber}"/>
+                                <input type="text" style = "width:100px;"  name="homePhoneNumber2" th:value="${form.homePhoneNumber2}"/>
                             </div>
                             <div class="field" th:classappend="${form.hasErrors('mobilePhoneNumber')} ? 'error'">
                                 <label>携帯電話番号</label>
                                 <input type="text" style = "width:100px;" name="mobilePhoneNumber" th:value="${form.mobilePhoneNumber}"/>
                                  -
-                                <input type="text" style = "width:100px;" name="mobilePhoneNumber" th:value="${form.mobilePhoneNumber}"/>
+                                <input type="text" style = "width:100px;" name="mobilePhoneNumber1" th:value="${form.mobilePhoneNumber1}"/>
                                  -
-                                <input type="text" style = "width:100px;" name="mobilePhoneNumber" th:value="${form.mobilePhoneNumber}"/>
+                                <input type="text" style = "width:100px;" name="mobilePhoneNumber2" th:value="${form.mobilePhoneNumber2}"/>
                             </div>
                             <div class="field" th:classappend="${form.hasErrors('emailAddress')} ? 'error'">
                                 <label>メールアドレス</label>
