--- a/src/main/resources/templates/cardOrder/job.html
+++ b/src/main/resources/templates/cardOrder/job.html
@@ -34,7 +34,9 @@
                             </div>
                             <div class="field" th:classappend="${form.hasErrors('employerZipCode')} ? 'error'">
                                 <label>お勤め先郵便番号</label>
-                                <input type="text" name="employerZipCode" th:value="${form.employerZipCode}"/>
+                                <input type="text"  style = "width:100px;" name="employerZipCode" th:value="${form.employerZipCode}"/>
+                                 -
+                                <input type="text" style = "width:100px;"  name="employerZipCode1" th:value="${form.employerZipCode1}"/>
                             </div>
                             <div class="field" th:classappend="${form.hasErrors('employerAddress')} ? 'error'">
                                 <label>お勤め先住所</label>
@@ -42,7 +44,11 @@
                             </div>
                             <div class="field" th:classappend="${form.hasErrors('employerPhoneNumber')} ? 'error'">
                                 <label>お勤め先電話番号</label>
-                                <input type="text" name="employerPhoneNumber" th:value="${form.employerPhoneNumber}"/>
+                                <input type="text"  style = "width:100px;" name="employerPhoneNumber" th:value="${form.employerPhoneNumber}"/>
+                                 -
+                                <input type="text"  style = "width:100px;" name="employerPhoneNumber1" th:value="${form.employerPhoneNumber1}"/>
+                                 -
+                                <input type="text"  style = "width:100px;" name="employerPhoneNumber2" th:value="${form.employerPhoneNumber2}"/>
                             </div>
                             <div class="field" th:classappend="${form.hasErrors('industryType')} ? 'error'">
                                 <label>業種</label>
