--- a/src/main/resources/templates/cardOrder/user.html
+++ b/src/main/resources/templates/cardOrder/user.html
@@ -21,13 +21,23 @@
                         <form class="ui form" method="post" action="/cardOrder/user">
 
                             <!-- /*エラーがあれば表示する*/ -->
+
                             <ul class="ui red basic label" th:if="${form.hasErrors()}">
                                 <li th:each="error : ${form.getErrors().entrySet()}" th:text="${error.value}"></li>
                             </ul>
+                            <!--error.key-->
+
 
                             <div class="ui horizontal divider">ご本人について</div>
 
                             <div class="field" th:classappend="${form.hasErrors('kanjiName')} ? 'error'">
+
+                                <!--
+                                <ul class="ui red basic label" th:if="${form.hasErrors('kanjiName')}">
+                                    <li th:each="error : ${form.getErrors('kanjiName').entrySet()}" th:text="${error.value}"></li>
+                                </ul>
+                                -->
+
                                 <font color="red">必須</font>
                                 <label>お名前（漢字） (例)姓:山田　名：太郎</label>
                                 姓：<input type="text" style = "width:150px;" name="kanjiName" th:value="${form.kanjiName}"/>
